--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Central Manor Bakery & Grille</title>
-  <link rel="stylesheet" href="styles.css"/>
+  <link rel="stylesheet" href="style.css"/>
   <style>
     * {
       margin: 0;
@@ -36,10 +36,8 @@
       align-items: center;
     }
 
-    .logo {
-      font-size: 1.8rem;
-      font-weight: bold;
-      color: #5c0000;
+    .logo img {
+      height: 60px;
     }
 
     .nav a {
@@ -143,63 +141,128 @@
       font-size: 1rem;
       color: #5c0000;
     }
+
+    .menu-section ul {
+      list-style: none;
+      padding: 0;
+    }
+
+    .menu-section li {
+      margin-bottom: 10px;
+      font-size: 1.1rem;
+    }
+
+    .order-form label {
+      display: block;
+      margin: 15px 0 5px;
+    }
+
+    .order-form input,
+    .order-form textarea {
+      width: 100%;
+      padding: 10px;
+      border: 1px solid #ccc;
+      border-radius: 5px;
+    }
+
+    .order-form button {
+      margin-top: 15px;
+      background-color: #5c0000;
+      color: #fff;
+      padding: 10px 20px;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+    }
   </style>
 </head>
 <body>
 
-  <!-- Header -->
+ 
   <header class="site-header">
     <div class="container">
-      <div class="logo">Central Manor</div>
+      <div class="logo">
+        <img src="images/logo.png" alt="Central Manor Logo">
+      </div>
       <nav class="nav">
         <a href="index.html">Home</a>
         <a href="bakery.html">Bakery</a>
         <a href="menu.html">Menu</a>
-        <a href="contact.html">Contact</a>
+        <a href="menu.html">Contact</a>
+
       </nav>
     </div>
   </header>
 
-  <!-- Hero Section -->
   <section class="hero">
     <div class="container hero-content">
       <div class="hero-text">
         <h1>Central Manor Bakery & Grille</h1>
         <p>Freshly baked, daily made — just like home.</p>
+        
       </div>
       <div class="hero-image">
-        <img src="images/hero-image.jpg" alt="Fresh bakery image">
+        <img src="images/logo.png" alt="Fresh bakery image">
       </div>
     </div>
   </section>
 
-  <!-- Specials Section -->
-  <section class="specials">
-    <div class="container">
-      <div class="section-header">
-        <h2>Specials</h2>
-        <a href="menu.html" class="show-more">Show More →</a>
+
+
+
+<section class="specials">
+  <div class="container">
+    <div class="section-header">
+      <h2>Specials</h2>
+    </div>
+    <div class="specials-grid">
+      <div class="special-card">
+        <img src="images/croquettes.jpg" alt="Chicken Croquettes">
+        <h3>Chicken Croquettes</h3>
       </div>
-      <div class="specials-grid">
-        <div class="special-card">
-          <img src="images/special1.jpg" alt="Chicken Croquettes">
-          <h3>Chicken Croquettes</h3>
-        </div>
-        <div class="special-card">
-          <img src="images/special2.jpg" alt="Turkey & Fillin’">
-          <h3>Turkey & Fillin’</h3>
-        </div>
-        <div class="special-card">
-          <img src="images/special3.jpg" alt="Chicken & Waffles">
-          <h3>Chicken & Waffles</h3>
-        </div>
-        <div class="special-card">
-          <img src="images/special4.jpg" alt="Pork & Fillin’">
-          <h3>Pork & Fillin’</h3>
-        </div>
+      <div class="special-card">
+        <img src="images/turkey.jpg" alt="Turkey & Fillin’">
+        <h3>Turkey & Fillin’</h3>
+      </div>
+      <div class="special-card">
+        <img src="images/waffles.jpg" alt="Chicken & Waffles">
+        <h3>Chicken & Waffles</h3>
+      </div>
+      <div class="special-card">
+        <img src="images/pork.jpg" alt="Pork & Fillin’">
+        <h3>Pork & Fillin’</h3>
       </div>
     </div>
-  </section>
+  </div>
+</section>
+
+
+  <section class="pretty-hours">
+  <div class="container">
+    <h2 class="hours-heading">We’re Open & Baking Fresh Daily!</h2>
+    <div class="hours-display">
+      <div class="day-block">
+        <span class="day">Monday – Thursday</span>
+        <span class="time">7:00 AM – 6:00 PM</span>
+      </div>
+      <div class="day-block">
+        <span class="day">Friday</span>
+        <span class="time">7:00 AM – 4:00 PM</span>
+      </div>
+    </div>
+  </div>
+</section>
+
+
+  <footer class="site-footer">
+  <div class="container">
+    <p><strong>Central Manor Bakery & Grille</strong></p>
+    <p>📍 3667 Blue Rock Rd, Lancaster, PA</p>
+    <p>📞 (717) 872-8211</p>
+  </div>
+</footer>
+
+
 
 </body>
 </html>
